# trade-receiver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_reviews.py  003_sizing_onboarding.py  004_product_hardening.py  005_processed_events.py  006_sessions.py  007_better_auth.py  008_drop_webhook_columns.py
app/: __main__.py  config.py  database.py  main.py
app/agents/: decide_action.py  parse_alert.py
app/api/: billing.py  brokers.py  deps.py  ingest.py  internal.py  reviews.py  settings.py  stats.py  trades.py  users.py  webhooks.py
app/brokers/: base.py  schwab.py  tradier.py  webull.py
app/middleware/: rate_limit.py
app/models/: __init__.py  tables.py
app/schemas/: __init__.py  review.py  trade.py
app/services/: broker_credentials.py  compute_quantity.py  crypto.py  entitlements.py  execute_trade.py  jwt_auth.py  migrations.py  oauth_state.py  option_chain.py  order_lifecycle.py  performance.py  position_check.py  production.py  token_refresh.py  validate_trade.py  webhook_normalize.py
tests/: test_broker_test_order.py  test_core.py  test_database.py  test_e2e.py  test_ingest.py  test_oauth_state.py  test_provision.py  test_reviews.py  test_sizing.py  test_stats.py
